syntax = "proto3";

package io.harness.pms.facilitators;

option java_multiple_files = true;

import "google/protobuf/duration.proto";

import "io/harness/pms/execution/execution_mode.proto";

message FacilitatorObtainment {
  FacilitatorType type = 1;
  bytes parameters = 2;
}

message FacilitatorType {
  string type = 1;
}

message FacilitatorResponseProto {
  google.protobuf.Duration initialWait = 1;
  execution.ExecutionMode executionMode = 2;
  string passThroughData = 3;
}
