syntax = "proto3";

package io.harness.task.service;

option java_multiple_files = true;
option go_package = "910_delegate_task_classic_grpc_service";

service DelegateTask {
  rpc QueueTask(DelegateClassicTaskRequest) returns (QueueTaskReply);
  rpc ExecuteTask(DelegateClassicTaskRequest) returns (ExecuteTaskReply);
}

message DelegateClassicTaskRequest {
  bytes delegate_task_kryo = 1;
}

message QueueTaskReply {
  string uuid = 1;
}

message ExecuteTaskReply {}